# platformer

./: CMakeLists.txt  README.md
include/: List.h  framecontrol.h  game.h  helpers.h  levels.h  objects.h  render.h  types.h
src/: List.c  framecontrol.c  game.c  helpers.c  levels.c  main.c  objects.c  render.c  types.c
